refactor(user/register): add return token
